<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/iv_back"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_blue_dark" />

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/smiley"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/iv_back"
            android:background="#FAFAFA" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_below="@+id/iv_login"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:src="@drawable/bom"
            app:civ_border_width="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_login"
            android:layout_marginTop="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_et"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/ic_user"
                        android:drawableRight="@drawable/ic_user"
                        android:hint="@string/user"
                        android:inputType="text"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableEnd="@drawable/ic_password"
                        android:drawableRight="@drawable/ic_password"
                        android:hint="@string/egPassword"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/shape_assign_request"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Login"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/forgetPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgetPass"
                        android:textColor="@android:color/holo_red_light"
                        android:padding="10dp"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registerHere"
                        android:textColor="@android:color/holo_green_dark"
                        android:padding="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>